<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="textintro">Droids Desserts</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="icecream">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="donut">Donuts are glazed and sprinkled with candy.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label_text">Name</string>
    <string name="order_text">Order</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter your address</string>
    <string name="phone_label">Phone</string>
    <string name="enter_phone_hint">Enter your phone</string>
    <string name="note_label">Note</string>
    <string name="enter_note_hint">Enter Note</string>
    <string name="delivery_label">Choose a delivery method:</string>"
    <string name="same_day_messenger_service">Next day ground delivery</string>
    <string name="next_day_ground_delivery">Same day messenger service</string>
    <string name="pick_up">Pickup</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>